Ensure all pref accesses are correct.

All channels of Chrome should use the same preferences. This
updates two preference accesses that were not updated in the
original change.

BUG=866750, 831577

Change-Id: Ibd0f8d2895027eb85772b3f5308ffebaef3aff32
Reviewed-on: https://chromium-review.googlesource.com/1148473
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577941}
Former-commit-id: 6fa568a41b3745d0876928c9352e541d1e015bd1